--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <link rel="stylesheet" href="src/sass/main.scss" />
 
-    <script defer type="module" src="src/js/controller.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
+
+    <script <script defer type="module" src="src/js/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -28,9 +30,7 @@
             placeholder="Search over 1,000,000 recipes..."
           />
           <button class="btn search__btn">
-            <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-search"></use>
-            </svg>
+            <i data-feather="search"></i>
             <span>Search</span>
           </button>
         </form>
