Closing the update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
           <ul class="nav__list">
             <li class="nav__item">
               <button class="nav__btn nav__btn--add-recipe">
-                <i data-feather="edit"></i>
+                <div>
+                  <i data-feather="edit"></i>
+                </div>
                 <span>Add recipe</span>
               </button>
             </li>
