--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <input
             type="text"
             class="search__field"
-            placeholder="Search over 1,000,000 recipes..."
+            placeholder="Try: pizza,pasta,avocado..."
           />
           <button class="btn search__btn">
             <i data-feather="search"></i>
